# sauerkraut

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
config/: Config.cpp  Config.h  ConfigSection.h
engine/: screen.cpp  state.h
log/: LogHandler.cpp  LogHandler.h  Logger.h
log/loggers/: FileLogger.cpp  FileLogger.h  OutLogger.cpp  OutLogger.h
scripting/: ScriptingHandler.cpp  ScriptingHandler.h
scripting/bindings/: LibCubeScript.cpp  LibCubeScript.h
src/: CMakeLists.txt  main.cpp
src/config/: Config.cpp  Config.h  ConfigSection.h
src/engine/: engine.cpp  engine.h  screen.h  state.h
src/engine/entities/: AnimInfo.h  Base.cpp  Base.h  Dynamic.cpp  Dynamic.h  Light.cpp  Light.h  Phys.cpp  Phys.h  Player.cpp  Player.h  States.h  enttypes.h
src/engine/hal/: HalHandler.cpp  HalHandler.h  iHandler.h  iSound.h  iVideo.h
src/engine/hal/handler/: Sdl2Handler.cpp  Sdl2Handler.h
src/engine/hal/sound/: Sdl2SoundHandler.cpp  Sdl2SoundHandler.h
src/engine/hal/video/: Sdl2VideoHandler.cpp  Sdl2VideoHandler.h  iHardwareAccel.h  iRenderer.h
src/engine/hal/video/hardwareaccel/: Opengl.cpp  Opengl.h  glexts.h
src/engine/hal/video/renderer/opengl/: Opengl.cpp  Opengl.h  glemuattrib.h
src/engine/particles/: particles.h
src/engine/physics/: Ragdoll.cpp  Ragdoll.h
src/engine/physics/ragdoll/: RagdollHandler.cpp  RagdollHandler.h  iRagdoll.h
src/engine/physics/ragdoll/original/: Ragdoll.cpp  Ragdoll.h
src/game/: Ai.cpp  Ai.h  Auth.cpp  Auth.h  GameData.cpp  GameData.h  GameState.cpp  GameState.h  PlayerState.cpp  PlayerState.h  Weapon.cpp  Weapon.h  gamemodes.h  items.h  sounds.h
src/game/client/: GameClient.cpp  GameClient.h
src/log/: LogHandler.cpp  LogHandler.h  Logger.h  iLogger.h
src/log/loggers/: FileLogger.cpp  FileLogger.h  OutLogger.cpp  OutLogger.h
src/network/: NetworkHandler.cpp  NetworkHandler.h
src/scripting/: ScriptingHandler.cpp  ScriptingHandler.h
src/scripting/bindings/: LibCubeScript.cpp  LibCubeScript.h
src/utils/: FileSystem.h  stringhelper.h
utils/: LockedQueue.h  stringhelper.h
